# vulkan-practice

./: .gitignore  CMakeLists.txt  README.md  compile_shaders.cmake  compile_shaders.sh  copy_assets.cmake
src/: main.cpp
src/shaders/: compile.bat  compile.sh
